runners/recentdocuments: Do not set match type to exact match when query is short

BUG: 431603